# Backtest

./: .gitignore  Benchmark.csv  README.md  main.py  portfolio_weights.csv  pyproject.toml
src/backtester/: engine.py
